--- a/ansible/base.yml
+++ b/ansible/base.yml
@@ -23,7 +23,9 @@
         - name: get Activator
           get_url: url="http://downloads.typesafe.com/typesafe-activator/1.2.10/typesafe-activator-1.2.10.zip" dest=/tmp/activator-1.2.10.zip
         - name: unzip acivator
-          raw: "if [ ! -d '/opt/activator/activator-1.2.10']; then unzip -q /tmp/activator-1.2.10.zip -d /opt/activator ; fi;"
+          raw: "if [ ! -d '/opt/activator/activator']; then unzip -q /tmp/activator-1.2.10.zip -d /tmp/ ; fi;"
+        - name: move activator to opt
+          raw: "if [ ! -d '/opt/activator/activator']; then mv -v /tmp/activator-1.2.10/* /opt/activator/ ; fi;"
         - name: export path variable
           raw: "echo 'export PATH=$PATH:/opt/activator' >> /home/play/.bashrc"
         - name: export java options variable
